--- a/recipes/baked-feta-pasta.html
+++ b/recipes/baked-feta-pasta.html
@@ -4,8 +4,33 @@
     <title>Baked Feta Pasta</title>
     <meta charset="utf-8">
   </head>
-
+  
   <body>
     <h1>Baked Feta Pasta</h1>
+    <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/delish-210212-feta-pasta-007-ab-1613747029.jpg?crop=0.668xw:1.00xh;0.138xw,0&resize=980:*" alt="a dish of baked feta pasta">
+    <h2>Description</h2>
+    <p>Craving cheese and pasta? Well you won't be craving much else for the forseeable future after you've tried this baked dish. Which is kinda understandable when you realize its basically just a block of feta baked over cherry tomatoes and mixed with some pasta. Simple <strong>AND</strong> delicious!</p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>2 pt. cherry or grape tomatoes</li>
+      <li>1 shallot, quartered</li>
+      <li>3 cloves of garlic, smashed</li>
+      <li>Kosher salt</li>
+      <li>Pinch of crushed red pepper flakes</li>
+      <li>1 (8-oz.) block of feta</li>
+      <li>3 sprigs of fresh thyme</li>
+      <li>10 oz. of pasta</li>
+      <li>Zest of 1 lemon (optional)</li>
+      <li>Fresh basil, for garnish</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>Preheat oven to 400°. In a large ovenproof skillet or medium baking dish, combine tomatoes, shallot, garlic, and all but 1 tablespoon oil. Season with salt and red pepper flakes and toss to combine. </li>
+      <li>Place feta into center of tomato mixture and drizzle with remaining 1 tablespoon oil. Scatter thyme sprigs over tomatoes. Bake for 40 to 45 minutes, until tomatoes are bursting and feta is golden on top. 
+      </li>
+      <li>Meanwhile, in a large pot of boiling salted water, cook pasta until al dente according to package directions. Reserve ½ cup pasta water before draining.</li>
+      <li>To skillet with tomatoes and feta, add cooked pasta, reserved pasta water, and lemon zest (if using) and stir until combined. Garnish with basil. </li>
+    </ol>
+    <a href="../index.html">More Odin Recipes</a>
   </body>
 </html>
