--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/baked-feta-pasta.html">Baked Feta Pasta</a>
+    <p>Cooking is fun! Anyone can do it!</p>
+    <img src="/resources/cooking.gif" alt="">
+    <ul>
+      <li><a href="/recipes/baked-feta-pasta.html">Baked Feta Pasta</a></li>
+      <li><a href="/recipes/buddha-bowl.html">Buddha Bowls</a></li>
+      <li><a href="/recipes/baked-feta-pasta.html">Something</a></li>
+    </ul>
   </body>
 </html>
