--- a/recipes/buddha-bowl.html
+++ b/recipes/buddha-bowl.html
@@ -10,13 +10,46 @@
     <img src="/resources/bowls.webp" alt="">
     <h2>Description</h2>
     <p></p>
-    <h2>Ingredients</h2>
+    <h2>Bowl Ingredients</h2>
+    <h3>for 2 servings</h3>
     <ul>
-      <li></li>
+      <li>8 oz firm tofu, drained</li>
+      <li>1 sweet potato, peeled and cubed</li>
+      <li>1 onion, sliced</li>
+      <li>2 cloves garlic, minced</li>
+      <li>1 tablespoon peanut or vegetable oil</li>
+      <li>1 cup chickpeas, drained</li>
+      <li>1/2 teaspoon salt, plus more to taste</li>
+      <li>1/2 teaspoon pepper, plus more to taste</li>
+      <li>1 teaspoon chili powder</li>
+      <li>1 teaspoon garlic powder</li>
+      <li>1 1/2 cups cooked quinoa</li>
+      <li>1 cup leafy greens, such as mesclun, baby kale, or spinach</li>
+      <li>1/4 cup shredded carrots, shredded</li>
+      <li>1 avocado, diced</li>
+      <li>Juice of 1 lemon</li>
+    </ul>
+    <h2>Marinade Ingredients</h2>
+    <ul>
+      <li>2 tablespoons vegetable oil</li>
+      <li>1/2 teaspoon sesame oil</li>
+      <li>1 teaspoon hot sauce</li>
+      <li>2 teaspoons dried thyme</li>
+      <li>1 teaspoon paprika</li>
+      <li>1/2 teaspoon salt</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-      <li></li>
+      <li>Make the marinade: In a small bowl, combine the vegetable oil, sesame oil, hot sauce, thyme, paprika, and salt. Set aside.</li>
+      <li>Add the marinade and tofu to a container and marinate for at least 30 minutes, or up to a day.</li>
+      <li>Preheat the oven to 400ºF (200ºC).</li>
+      <li>Lay the sweet potato, onion, and garlic on a baking sheet and drizzle with oil. Season with salt and pepper. Bake for 20-25 minutes.</li>
+      <li>In a medium bowl, add the chickpeas, salt, pepper, chili powder, and garlic powder to a bowl and stir to combine.</li>
+      <li>Transfer chickpeas to a skillet and cook over medium heat for about 10 minutes. Set chickpeas aside.</li>
+      <li>Fry the tofu in the same pan for about 10 minutes on each side.</li>
+      <li>Slice tofu to your preference.</li>
+      <li>Combine the quinoa, greens, sweet potatoes, onions, chickpeas, carrots, tofu, and avocado in a medium-large bowl and top off with lemon juice</li>
+      <li>Enjoy!</li>
     </ol>
 
     <a href="../index.html">More Odin Recipes</a>
