--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
       <li><a href="/recipes/baked-feta-pasta.html">Baked Feta Pasta</a></li>
       <li><a href="/recipes/buddha-bowl.html">Buddha Bowls</a></li>
-      <li><a href="/recipes/baked-feta-pasta.html">Something</a></li>
+      <li><a href="/recipes/tuscan-chicken.html">Creamy Tuscan Chicken</a></li>
     </ul>
   </body>
 </html>
