--- a/recipes/buddha-bowl.html
+++ b/recipes/buddha-bowl.html
@@ -9,7 +9,7 @@
     <h1>Buddha Bowls</h1>
     <img src="/resources/bowls.webp" alt="">
     <h2>Description</h2>
-    <p></p>
+    <p>Whoever said vegetarians don't get enough protein must not have tried this Buddha bowl. Between the tofu and chickpeas there's more than enough protein to get you energized. And of course it tastes great too!</p>
     <h2>Bowl Ingredients</h2>
     <h3>for 2 servings</h3>
     <ul>
