--- a/recipes/tuscan-chicken.html
+++ b/recipes/tuscan-chicken.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1>Creamy Tuscan Chicken</h1>
-    <img src="/resources/chicken.jpg" alt="">
+    <img src="../resources/chicken.jpg" alt="">
     <h2>Description</h2>
     <p>Apparently this recipe is so good it will bring Tuscany, Italy to you. But, I just took a bite and I don't remember reading about the <strong>Pearly White Gates of Tuscany!</strong>... What?... Okay! Maybe I like Italian food too much! Why don't you try writing a catchy paragraph for an entre and see how ridiculous you sound! Creamy chicken with veggies and parmesan; what more do you want!?</p>
     <h2>Ingredients</h2>
