--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     <h1>Odin Recipes</h1>
     <p>Cooking is fun! Anyone can do it!</p>
-    <img src="/resources/cooking.gif" alt="">
+    <img src="./resources/cooking.gif" alt="">
     <ul>
-      <li><a href="/recipes/baked-feta-pasta.html">Baked Feta Pasta</a></li>
-      <li><a href="/recipes/buddha-bowl.html">Buddha Bowls</a></li>
-      <li><a href="/recipes/tuscan-chicken.html">Creamy Tuscan Chicken</a></li>
+      <li><a href="./recipes/baked-feta-pasta.html">Baked Feta Pasta</a></li>
+      <li><a href="./recipes/buddha-bowl.html">Buddha Bowls</a></li>
+      <li><a href="./recipes/tuscan-chicken.html">Creamy Tuscan Chicken</a></li>
     </ul>
   </body>
 </html>
