--- a/recipes/baked-feta-pasta.html
+++ b/recipes/baked-feta-pasta.html
@@ -8,7 +8,7 @@
 
   <body>
     <h1>Baked Feta Pasta</h1>
-    <img src="/resources/feta-pasta.jpg" alt="a dish of baked feta pasta">
+    <img src="../resources/feta-pasta.jpg" alt="a dish of baked feta pasta">
     <h2>Description</h2>
     <p>Craving cheese and pasta? Well you won't be craving much else for the forseeable future after you've tried this baked dish. Which is kinda understandable when you realize its basically just a block of feta baked over cherry tomatoes and mixed with some pasta. Simple <strong>AND</strong> delicious!</p>
     <h2>Ingredients</h2>
